# sciroc_darknet_bridge

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: console.config  objdet.yaml
include/sciroc_darknet_bridge/: SciRocDarknetBridge.hpp  bridge_utils.hpp
launch/: sciroc_darknet_bridge.launch  sciroc_darknet_bridge_gdb.launch
src/: ClasBridge.cpp  CompBridge.cpp  EnumBridge.cpp  SciRocDarknetBridge.cpp  bridge_utils.cpp  sciroc_darknet_bridge_node.cpp
