<?xml version="1.0"?>
<package format="2">
  <name>sciroc_darknet_bridge</name>
  <version>0.0.8</version>
  <description>The sciroc_darknet_bridge package</description>

  
  <maintainer email="5083365@studenti.unige.it">Marco Gabriele Fedozzi</maintainer>
  
  <license>MIT</license>
  
  <author email="5083365@studenti.unige.it">Marco Gabriele Fedozzi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>cv_bridge</depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>darknet_ros</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <depend>geometry_msgs</depend>
  <build_depend>sciroc_objdet</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>darknet_ros</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sciroc_objdet</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>darknet_ros</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sciroc_objdet</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
